@startuml

class InventoryTracker {
    start()
    main()
}

class MainWindowController {
    + MainWindowController()

    addNewItemButtonClicked(EventHandler)
    deleteSelectedItemButtonClicked((EventHandler)
    searchItemNameButtonClicked()
    searchSerialNumberClicked()
    exitSearchButtonClicked()
    saveAsHtmlButtonClicked(EventHandler)
    saveAsTsvButtonClicked(EventHandler)
    saveAsJsonButtonClicked(EventHandler)

    addItem(String, String, BigDecimal)
    editItem()
    deleteSelectedItemButtonClickedSubFunction()
    serialNumberValidator()
    duplicateSerialNumberChecker()
    itemNameValidator()
    searchItemNameButtonClickedSubFunction()
    searchSerialNumberClickedSubFunction()
    exitSearchButtonClickedSubFunction()
    saveAsHtmlButtonClickedSubFunction()
    saveAsTsvButtonClickedSubFunction()
    saveAsJsonButtonClickedSubFunction()

    - ObservableList<Item>
}

class Item {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleStringProperty

    + getName()
    + setName()
    + nameProperty()
    + getSerialNumber()
    '...
}

openjfx.org.Application <|-- InventoryTracker
InventoryTracker -- MainWindowController
MainWindowController - FileManager
MainWindowController o-- Item
@enduml